--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.scss'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='/public/output.css'>
 
 	<script defer src='/build/bundle.js'></script>
 </head>
